# Cline-Xray

./: .changesignore  .env.example  .gitignore  API_HOWTO.md  API_LIST_DUPLICATION.md  ASK_LLM_HOWTO.md  CLINE_SHADOW_GIT_HOWTO.md  CONVERSATION_HISTORY_TODO.md  DEV_GUIDE.md  JIRA_API_IMPLEMENTATION.md  JIRA_MODULE_GUIDE.md  LATEST_HOWTO.md  LOGGING_FOR_HOWTO.md  NEW_TOOLS_WHY.md  README.md  SHADOW_GIT_SUBTASK_FIX.md  SHOW_GIT_COMMAND_HOWTO.md  SLEEP_HOWTO.md  SUBTASK_FI.md  SUBTASK_FIX.md  TASK_CLEANUP_HOWTO.md  TOOLS_HOWTO.md  TOOL_RUNTIME_HOWTO.md  UI_VS_CLI_COMPARISON.md  bld.bat  check_log.bat  cline-changes.patch  fibonacci.js  fibonacci.py  index.html  jlist.py  jlist_requests.py  jtest.py  kil.bat  klean.bat  list_apis.ps1  package-lock.json  package.json  shadow_dif_discovery.md  statement_line_2025_report.EL_USA_SP1.sql  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: changesignore.rs  config.rs  jira.rs  logging.rs  main.rs  openapi.rs  server.rs  state.rs
src-tauri/src/api/: handlers.rs  middleware.rs
src-tauri/src/conversation_history/: cache.rs  detail.rs  files.rs  handlers.rs  messages.rs  mod.rs  parser.rs  root.rs  subtasks.rs  summary.rs  thinking.rs  tools.rs  types.rs  util.rs
src-tauri/src/conversation_history/handlers/: mod.rs  (+9 more)
src-tauri/src/latest/: handler.rs  mod.rs  types.rs
src-tauri/src/shadow_git/: cache.rs  cleanup.rs  discovery.rs  handlers.rs  mod.rs  types.rs
src-tauri/src/tool_runtime/: circuit_breaker.rs  config.rs  executor.rs  fixtures.rs  handlers.rs  mod.rs  types.rs  validator.rs
(+100 files in other folders)
