[package]
name = "jira-viewer"
version = "0.1.0"
description = "A Jira Issue Viewer"
authors = ["you"]
edition = "2021"
default-run = "jira-viewer"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
once_cell = "1.19"
urlencoding = "2.1"
dotenvy = "0.15"
chrono = "0.4"
log = "0.4"
simplelog = "0.12"
toml = "0.8"
directories = "5.0"

# REST API / Axum
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
anyhow = "1"
hex = "0.4"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
thiserror = "1.0"
